plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.0'
}

group = 'com.soystargaze'
version = '1.6.0'

repositories {
    mavenCentral()
    maven {
        name = "papermc-repo"
        url = "https://repo.papermc.io/repository/maven-public/"
    }
    maven {
        url = "https://oss.sonatype.org/content/repositories/snapshots"
    }
    maven {
        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
    }
    maven {
        url = "https://jitpack.io"
    }
    maven {
        url = "https://repo.extendedclip.com/releases/"
    }
    maven {
        url = "https://maven.enginehub.org/repo/"
    }
}

dependencies {
    compileOnly("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
    //compileOnly("org.spigotmc:spigot-api:1.21.4-R0.1-SNAPSHOT")
    compileOnly("me.clip:placeholderapi:2.11.6")
    implementation("net.kyori:adventure-platform-bukkit:4.3.4")
    implementation("net.kyori:adventure-text-minimessage:4.20.0")
    implementation("net.kyori:adventure-text-serializer-plain:4.20.0")
    implementation("com.zaxxer:HikariCP:5.0.1")
    implementation("org.bstats:bstats-bukkit:3.0.2")
    compileOnly("com.github.MilkBowl:VaultAPI:1.7.1")
    compileOnly("com.github.GriefPrevention:GriefPrevention:16.18.4")
    compileOnly("com.github.angeschossen:LandsAPI:7.10.13")
    compileOnly("com.sk89q.worldguard:worldguard-bukkit:7.0.13")
    compileOnly files('APIs/AdvancedEnchantments-8.7.4.jar')
    compileOnly files('APIs/Lootin-12.0.jar')
    implementation("com.saicone.rtag:rtag-block:1.5.10")
    implementation("com.saicone.rtag:rtag:1.5.10")
    implementation("dev.triumphteam:triumph-gui:3.1.12")
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(21)
}

processResources {
    filesMatching('plugin.yml') {
        expand 'version': version
    }
}

tasks.shadowJar {
    archiveClassifier.set('')
    minimize()
    relocate 'org.bstats', 'com.soystargaze.vitamin.shaded.bstats'
    relocate 'com.saicone.rtag', 'com.soystargaze.vitamin.libs.rtag'
    relocate("dev.triumphteam.gui", "com.soystargaze.vitamin.gui")
}

tasks.build {
    dependsOn tasks.shadowJar
}